--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; 2024.</a>.</p>
+						<p class="copyright">&copy; 2024.</a></p>
 					</footer>
 
 			</div>
