--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>About Me</h1>
+								<h1>Marco Arellano | Finance Graduate</h1>
 								<p> Work In Progress!</p>
 							</div>
 						</div>
