--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Marco Arellano / Finance Graduate</h1>
-								<p> Work In Progress!</p>
+								<h1>Marco Arellano</h1>
+								<p> Cal Poly Pomona Finance Graduate</p>
 							</div>
 						</div>
 						<nav>
