--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Marco Arellano</h1>
-								<p> Cal Poly Pomona Finance Graduate</p>
+								<h1>Marco Arellano / Finance Graduate</h1>
+								<p> B.S. Finance, Real Estate, Law: Finance Option — Cal Poly Pomona</p>
+								<p> A.S. Business Administration — Mt. San Antonio College</p>
 							</div>
 						</div>
 						<nav>
