--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Marco Arellano / Finance Graduate</h1>
+								<h1>Marco Arellano</h1>
 								<p> B.S. Finance, Real Estate, Law: Finance Option — Cal Poly Pomona</p>
 								<p> A.S. Business Administration — Mt. San Antonio College</p>
 							</div>
