--- a/index.html
+++ b/index.html
@@ -62,26 +62,8 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
 								<ul class="icons">
+									<li><a href="mailto:marco.arellano24ml@gmail.com" class="icon fa-envelope"><span class="label">Mail</span></a></li>
 									<li><a href="https://www.linkedin.com/in/maarellano1/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://github.com/mvrcoo/Portfolio" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
