--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">About Me</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="#Experience">Experience</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
