--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">About Me</a></li>
-								<li><a href="#Experience">Experience</a></li>
+								<li><a href="#Work">Work</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -50,9 +50,9 @@
 								<p> Some of my hobbies include playing guitar, solving 3d puzzles, reading about how F1 cars work, and playing chess. </p>
 							</article>
 
-						<!-- Experience -->
-							<article id="Experience">
-								<h2 class="major">Experience</h2>
+						<!-- Work -->
+							<article id="Work">
+								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Cal Poly Rose Float</p>
 								<p>I began as a participant in the 2023 Road To Reclamation Float, helping create elements such as the Baby Snails, Mushroom Cap, and Pod. </p>
