--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 						<!-- Work -->
 							<article id="Work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/image2.jpg" alt="" /></span>
 								<p>Cal Poly Rose Float</p>
-								<p>I began as a participant in the 2023 Road To Reclamation Float, helping create elements such as the Baby Snails, Mushroom Cap, and Pod. </p>
+								<p>Here are some of the designs I created during my time as the merchandise coordinator for Cal Poly Rose Floats'<a href="https://www.rosefloat.org/shock-n-roll">75th Entry for the 135th Tournament of Roses Parade</a>.</p>
 							</article>
 
 						<!-- Contact -->
