--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 								<p>Cal Poly Rose Float</p>
 								<p>Here are some of the designs I created during my time as the merchandise coordinator for Cal Poly Rose Floats'<a href="https://www.rosefloat.org/shock-n-roll">75th Entry for the 135th Tournament of Roses Parade</a>.</p>
 								<span class="image main"><img src="images/image2.jpg" alt="" /></span>
+								<span class="image main"><img src="images/image4.jpg" alt="" /></span>
+								<span class="image main"><img src="images/image5.jpg" alt="" /></span>
+								<span class="image main"><img src="images/image7.jpg" alt="" /></span>
 							</article>
 
 						<!-- Contact -->
