--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 								<span class="image main"><img src="images/image4.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image5.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image7.jpg" alt="" /></span>
+								<span class="image main"><img src="images/image6.jpg" alt="" /></span>
 							</article>
 
 						<!-- Contact -->
