--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 							<article id="intro">
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/pic01.png" alt="" /></span>
-								<p>Hi! My name is Marco, and I am a recent finance graduate from Cal Poly Pomona. I also hold an AS in Business Administration from Mt. San Antonio College. Check out some of my <a href="#Experience">awesome work</a>.</p>
-								<p> Some of my hobbies include playing guitar, solving 3d puzzles, reading about how F1 cars work, and playing chess. </p>
+								<p>Hi! My name is Marco, and I am a recent finance graduate from Cal Poly Pomona. I also hold an AS in Business Administration from Mt. San Antonio College. Check out some of my <a href="#Work">awesome work</a>.</p>
+								<p> Some of my hobbies include playing guitar, solving 3D puzzles, reading about how F1 cars work, and playing chess. </p>
 							</article>
 
 						<!-- Work -->
