--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<span class="image main"><img src="images/image5.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image7.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image6.jpg" alt="" /></span>
-								<p>Cal Poly Pomona Projects</p>
+								<p>Other Projects</p>
 							</article>
 
 						<!-- Contact -->
