--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 								<span class="image main"><img src="images/image7.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image6.jpg" alt="" /></span>
 								<p>Other Projects</p>
+								<p>Work In progress!</p>
 							</article>
 
 						<!-- Contact -->
