--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 								<span class="image main"><img src="images/image6.jpg" alt="" /></span>
 								<p>Other Projects</p>
 								<p>Work In progress!</p>
+								<span class="image main"><img src="images/among-us.gif" alt="" /></span>
 							</article>
 
 						<!-- Contact -->
