--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 								<span class="image main"><img src="images/image5.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image7.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image6.jpg" alt="" /></span>
+								<span class="image main"><img src="images/image8.jpg" alt="" /></span>
+								<span class="image main"><img src="images/image9.jpg" alt="" /></span>
 								<p>Other Projects</p>
 								<p>Work In progress!</p>
 							</article>
