--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 								<p> Some of my hobbies include playing guitar, solving 3D puzzles, collecting Lego technic sets, reading about how F1 cars work, and playing chess. </p>
 							</article>
 
-						<!-- Work -->
-							<article id="Work">
-								<h2 class="major">Work</h2>
+						<!-- Cal Poly Rose Float -->
+							<article id="Cal Poly Rose Float">
+								<h2 class="major">Extra Curriculars</h2>
 								<p>Cal Poly Rose Float</p>
 								<p>Here are some of the designs I created during my time as the merchandise coordinator for Cal Poly Rose Floats' <a href="https://www.rosefloat.org/shock-n-roll">75th Entry for the 135th Tournament of Roses Parade</a>.</p>
 								<span class="image main"><img src="images/image3.jpg" alt="" /></span>
@@ -63,6 +63,14 @@
 								<span class="image main"><img src="images/image8.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image9.jpg" alt="" /></span>
 								<p>Other Projects</p>
+								<p>Work In progress!</p>
+							</article>
+						<!-- Projects -->
+							<article id="Projects">
+								<h2 class="major">Projects</h2>
+								<p>Portfolio Optimization and Data</p>
+								<p>Here are some of the designs I created during my time as the merchandise coordinator for Cal Poly Rose Floats' <a href="https://www.rosefloat.org/shock-n-roll">75th Entry for the 135th Tournament of Roses Parade</a>.</p>
+								<span class="image main"><img src="images/image3.jpg" alt="" /></span>
 								<p>Work In progress!</p>
 							</article>
 
