--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								<h2 class="major">Projects</h2>
 								<p>Portfolio Optimization and Data</p>
 								<p>Here are some of the designs I created during my time as the merchandise coordinator for Cal Poly Rose Floats' <a href="https://www.rosefloat.org/shock-n-roll">75th Entry for the 135th Tournament of Roses Parade</a>.</p>
-								<span class="image main"><img src="images/image3.jpg" alt="" /></span>
+								<span class="image main"><img src="images/Portfolio Optimization.pdf" alt="" /></span>
 								<p>Work In progress!</p>
 							</article>
 
