--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">About Me</a></li>
-								<li><a href="#Work">Work</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#Cal Poly Rose Float">Cal Poly Rose Float</a></li>
+								<li><a href="#Projects">Projects</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
