--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
 
 						<!-- Cal Poly Rose Float -->
 							<article id="Cal Poly Rose Float">
-								<h2 class="major">Extra Curriculars</h2>
-								<p>Cal Poly Rose Float</p>
+								<h2 class="major">Cal Poly Rose Floatloat</p>
 								<p>Here are some of the designs I created during my time as the merchandise coordinator for Cal Poly Rose Floats' <a href="https://www.rosefloat.org/shock-n-roll">75th Entry for the 135th Tournament of Roses Parade</a>.</p>
 								<span class="image main"><img src="images/image3.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image4.jpg" alt="" /></span>
@@ -65,6 +64,7 @@
 								<p>Other Projects</p>
 								<p>Work In progress!</p>
 							</article>
+						
 						<!-- Projects -->
 							<article id="Projects">
 								<h2 class="major">Projects</h2>
