--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 								<li><a href="#intro">About Me</a></li>
 								<li><a href="#Cal Poly Rose Float">Cal Poly Rose Float</a></li>
 								<li><a href="#Projects">Projects</a></li>
+								<li><a href="#Contact">contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -49,6 +50,8 @@
 								<p>Hi! My name is Marco, and I am a recent finance graduate from Cal Poly Pomona. I also hold an AS in Business Administration from Mt. San Antonio College. Check out some of my <a href="#Work">work</a>.</p>
 								<p> Some of my hobbies include playing guitar, solving 3D puzzles, collecting Lego technic sets, reading about how F1 cars work, and playing chess. </p>
 							</article>
+				<!-- Main -->
+					<div id="main">
 
 						<!-- Cal Poly Rose Float -->
 							<article id="Cal Poly Rose Float">
