--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<li><a href="#intro">About Me</a></li>
 								<li><a href="#Cal Poly Rose Float">Cal Poly Rose Float</a></li>
 								<li><a href="#Projects">Projects</a></li>
-								<li><a href="#Contact">contact</a></li>
+								<li><a href="#Contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -78,7 +78,7 @@
 							</article>
 
 						<!-- Contact -->
-							<article id="contact">
+							<article id="Contact">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="#">
 								<ul class="icons">
