--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 						<!-- Cal Poly Rose Float -->
 							<article id="Cal Poly Rose Float">
-								<h2 class="major">Cal Poly Rose Floatloat</p>
+								<h2 class="major">Cal Poly Rose Float</p>
 								<p>Here are some of the designs I created during my time as the merchandise coordinator for Cal Poly Rose Floats' <a href="https://www.rosefloat.org/shock-n-roll">75th Entry for the 135th Tournament of Roses Parade</a>.</p>
 								<span class="image main"><img src="images/image3.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image4.jpg" alt="" /></span>
