--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">About Me</a></li>
-								<li><a href="#CPRF">Cal Poly Rose Float</a></li>
+								<li><a href="#Work">Cal Poly Rose Float</a></li>
 								<li><a href="#Projects">Projects</a></li>
 								<li><a href="#Contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -52,7 +52,7 @@
 							</article>
 
 						<!-- Cal Poly Rose Float -->
-							<article id="CPRF">
+							<article id="Work">
 								<h2 class="major">Cal Poly Rose Float</p>
 								<p>Here are some of the designs I created during my time as the merchandise coordinator for Cal Poly Rose Floats' <a href="https://www.rosefloat.org/shock-n-roll">75th Entry for the 135th Tournament of Roses Parade</a>.</p>
 								<span class="image main"><img src="images/image3.jpg" alt="" /></span>
@@ -62,8 +62,6 @@
 								<span class="image main"><img src="images/image6.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image8.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image9.jpg" alt="" /></span>
-								<p>Other Projects</p>
-								<p>Work In progress!</p>
 							</article>
 						
 						<!-- Projects -->
