--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">About Me</a></li>
-								<li><a href="#Work">Work</a></li>
+								<li><a href="#CPRF">Cal Poly Rose Float</a></li>
+								<li><a href="#Projects">Projects</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -50,10 +51,9 @@
 								<p> Some of my hobbies include playing guitar, solving 3D puzzles, collecting Lego technic sets, reading about how F1 cars work, and playing chess. </p>
 							</article>
 
-						<!-- Work -->
-							<article id="Work">
-								<h2 class="major">Work</h2>
-								<p>Cal Poly Rose Float</p>
+						<!-- CPRF -->
+							<article id="CPRF">
+								<h2 class="major">Cal Poly Rose Float</h2>
 								<p>Here are some of the designs I created during my time as the merchandise coordinator for Cal Poly Rose Floats' <a href="https://www.rosefloat.org/shock-n-roll">75th Entry for the 135th Tournament of Roses Parade</a>.</p>
 								<span class="image main"><img src="images/image3.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image4.jpg" alt="" /></span>
@@ -62,8 +62,12 @@
 								<span class="image main"><img src="images/image6.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image8.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image9.jpg" alt="" /></span>
-								<p>Other Projects</p>
-								<p>Work In progress!</p>
+							</article>
+						
+						<!-- Projects -->
+							<article id="Projects">
+								<h2 class="major">Projects</h2>
+								<iframe src="Asset%20Management%20Portfolio%20Data.pdf" width="100%" height="600" style="border: none;"></iframe>
 							</article>
 
 						<!-- Contact -->
