--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<!-- Projects -->
 							<article id="Projects">
 								<h2 class="major">Projects</h2>
-								<iframe src="Asset%20Management%20Portfolio%20Data.pdf" width="100%" height="600" style="border: none;"></iframe>
+								<span class="image main" style="display: block;"> <iframe src="Asset%20Management%20Portfolio%20Data.pdf" width="100%" height="600" style="border: none;"></iframe></span>
 							</article>
 
 						<!-- Contact -->
