--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<!-- Projects -->
 							<article id="Projects">
 								<h2 class="major">Projects</h2>
-								<span class="image main"><img src="images/Portfolio Optimization.pdf" alt="" /></span>
+								<span class="image main"><img src="images/Portfolio Optimization.jpg" alt="" /></span>
 							</article>
 
 						<!-- Contact -->
