--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 						<!-- Projects -->
 							<article id="Projects">
 								<h2 class="major">Projects</h2>
+								<p>Portfolio Optimization using Pandas to extract data from <a href="https://drive.google.com/file/d/1mFjm56OogE5joQJQpY2pT0IvmE27AKmL/view">Yahoo Finance</a>.</p>
 								<span class="image main"><img src="images/Portfolio Optimization.jpg" alt="" /></span>
 							</article>
 
