--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
 								<h3 class="major">Portfolio Asset Optimization</h3>
 								<p>Portfolio Optimization using Pandas to extract data from <a href="https://drive.google.com/file/d/1mFjm56OogE5joQJQpY2pT0IvmE27AKmL/view">Yahoo Finance</a>.</p>
 								<span class="image main"><img src="images/Portfolio Optimization.jpg" alt="" /></span>
-								<p>Asset management portfolio simulation <a href="https://drive.google.com/file/d/1mFjm56OogE5joQJQpY2pT0IvmE27AKmL/view">presentation completed with a team of four</a>. and a detailed <a href="https://drive.google.com/file/d/1DKtQ9qwWEXR_hT7DIMC9rQwhWEwszaoP/view"> report highlighting our simulation</p>
-								<span class="image main"><img src="images/Portfolio Optimization.jpg" alt="" /></span>
+								<h3 class="major">Stock Portfolio Simulation + Report</h3>
+								<p>Asset management portfolio simulation <a href="hhttps://drive.google.com/file/d/1Y7PZYUURwVu5k8pfYvOd9TJGw2iznXP-/view">presentation completed with a team of four</a> and a detailed <a href="https://drive.google.com/file/d/1DKtQ9qwWEXR_hT7DIMC9rQwhWEwszaoP/view"> report highlighting our simulation</p>
+								<span class="image main"><img src="images/slide1.jpg" alt="" /></span>
 							</article>
 
 						<!-- Contact -->
