--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<span class="image main"><img src="images/slide1.jpg" alt="" /></span>
 								<h3 class="major">Applying Linux and Python to Monitor Stock Tickers</h3>
 								<li><a href="https://nbviewer.jupyter.org/github/mvrcoo/themarcohh/blob/main/Marco_Arellano_Ticker_Charts_Research_Project.ipynb" target="_blank">View My Jupyter Notebook on nbviewer</a></li>
-								<p><a href="https://drive.google.com/file/d/1UOZpPfxIJtQ8E-Nw2_13DXSqaP-kqSGM/view?usp=sharing"></a></p>
+								<a href="https://drive.google.com/file/d/1UOZpPfxIJtQ8E-Nw2_13DXSqaP-kqSGM/view?usp=sharing"></a>
 								<span class="image main"><img src="images/chart1.jpg" alt="" /></span>
 							</article>
 
