--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 								<p>Asset management portfolio simulation <a href="https://drive.google.com/file/d/1Y7PZYUURwVu5k8pfYvOd9TJGw2iznXP-/view">presentation completed with a team of three</a> and a detailed <a href="https://drive.google.com/file/d/1DKtQ9qwWEXR_hT7DIMC9rQwhWEwszaoP/view"> report highlighting our simulation</a>.</p>
 								<span class="image main"><img src="images/slide1.jpg" alt="" /></span>
 								<h3 class="major">Applying Linux and Python to Monitor Stock Tickers</h3>
-								<li><a href="https://nbviewer.jupyter.org/github/mvrcoo/themarcohh/blob/main/Marco_Arellano_Ticker_Charts_Research_Project.ipynb" target="_blank">View My Jupyter Notebook on nbviewer</a></li>
-								<a href="https://drive.google.com/file/d/1UOZpPfxIJtQ8E-Nw2_13DXSqaP-kqSGM/view?usp=sharing"></a>
+								<p><a href="https://nbviewer.jupyter.org/github/mvrcoo/themarcohh/blob/main/Marco_Arellano_Ticker_Charts_Research_Project.ipynb" target="_blank">View My Jupyter Notebook on nbviewer</a></li>
+								<p>Here is a PDF copy to the full <a href="https://drive.google.com/file/d/1UOZpPfxIJtQ8E-Nw2_13DXSqaP-kqSGM/view?usp=sharing">report</a>.</p>
 								<span class="image main"><img src="images/chart1.jpg" alt="" /></span>
 							</article>
 
