--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								<p><a href="https://nbviewer.jupyter.org/github/mvrcoo/marcoaa/blob/main/Marco_Arellano_Ticker_Charts_Research_Project.ipynb" target="_blank">View My Jupyter Notebook on nbviewer</a></li>
 								<p>Here is a PDF copy to the full <a href="https://drive.google.com/file/d/1MTirhRsNKP9I0csxyE9I7Czg7qh00ekC/view?usp=sharing">report</a>.</p>
 								<span class="image main"><img src="images/chart1.jpg" alt="" /></span>
-								<h3 class="major">Optimizing Portfolios with Jupyter Notebook and Python</h3>
+								<h3 class="major">Optimizing Portfolios with Jupyter Notebook + Python</h3>
 								<p><a href="https://nbviewer.jupyter.org/github/mvrcoo/Portfolio/blob/main/Portfolio_Optimization.ipynb" target="_blank">View My Work Here</a></li>
 								<p>Here is a PDF copy to the full <a href="https://drive.google.com/file/d/1MTirhRsNKP9I0csxyE9I7Czg7qh00ekC/view?usp=sharing">report</a>.</p>
 								<span class="image main"><img src="images/plot1.jpg" alt="" /></span>
