--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 								<span class="image main"><img src="images/chart1.jpg" alt="" /></span>
 								<h3 class="major">Optimizing Portfolios w/ Jupyter Notebook + Python</h3>
 								<p><a href="https://nbviewer.jupyter.org/github/mvrcoo/Portfolio/blob/main/Portfolio_Optimization.ipynb" target="_blank">View My Work Here</a></li>
-								<p>Here is a PDF copy to the full <a href="https://drive.google.com/file/d/1MTirhRsNKP9I0csxyE9I7Czg7qh00ekC/view?usp=sharing">report</a>.</p>
+								<p>Here is a PDF copy to the full <a href="https://drive.google.com/file/d/17c8asqNf_bnCFMtXeHM4fhFvF4UgAa4S/view?usp=sharing">code with the plot figure</a>.</p>
 								<span class="image main"><img src="images/plot1.jpg" alt="" /></span>
 							</article>
 
