--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 								<p><a href="https://nbviewer.jupyter.org/github/mvrcoo/Portfolio/blob/main/Portfolio_Optimization.ipynb" target="_blank">View My Work Here</a></li>
 								<p>Here is a PDF copy to the full <a href="https://drive.google.com/file/d/17c8asqNf_bnCFMtXeHM4fhFvF4UgAa4S/view?usp=sharing">code with the plot figure</a>.</p>
 								<span class="image main"><img src="images/plot1.jpg" alt="" /></span>
+								<p><a href="efficient_frontier.html" target="_blank">View Interactive Chart</a></p>
 							</article>
 
 						<!-- Contact -->
