--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 								<p>Here is a PDF copy to the full <a href="https://drive.google.com/file/d/17c8asqNf_bnCFMtXeHM4fhFvF4UgAa4S/view?usp=sharing">code with the plot figure</a>.</p>
 								<span class="image main"><img src="images/plot1.jpg" alt="" /></span>
 								<p><a href="efficient_frontier.html" target="_blank">View Interactive Chart</a></p>
+								<iframe src="efficient_frontier.html" width="100%" height="600" style="border: none;"></iframe>
 							</article>
 
 						<!-- Contact -->
