--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<span class="image main"><img src="images/image8.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image9.jpg" alt="" /></span>
 								<h3 class="major">Design Participant</h3>
-								<p>Here are some photos during my time as a design participant</p>
+								<p>Here are some photos during my time as a design participant.</p>
 								<span class="image main"><img src="images/pod.JPG" alt="" /></span>
 								<span class="image main"><img src="images/mushcap.jpg" alt="" /></span>
 								<span class="image main"><img src="images/snail.jpg" alt="" /></span>
