--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Marco Arellano</h1>
-								<p> B.S. Finance, Real Estate, Law: Finance Option — Cal Poly Pomona</p>
+								<p> B.S. Finance, Real Estate, & Law — Cal Poly Pomona</p>
 								<p> A.S. Business Administration — Mt. San Antonio College</p>
 							</div>
 						</div>
@@ -47,7 +47,7 @@
 							<article id="intro">
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/pic01.png" alt="" /></span>
-								<p>Hi! My name is Marco, and I am a recent finance graduate from Cal Poly Pomona. I also hold an AS in Business Administration from Mt. San Antonio College. Check out some of my <a href="#Work">work</a>.</p>
+								<p>Hi! My name is Marco, and I am finance graduate from Cal Poly Pomona. I also hold an AS in Business Administration from Mt. San Antonio College. Check out some of my <a href="#Projects">work</a>.</p>
 								<p> Some of my hobbies include playing guitar, solving 3D puzzles, collecting Lego technic sets, reading about how F1 cars work, and playing chess. </p>
 							</article>
 
