--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<span class="image main"><img src="images/image4.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image5.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image7.jpg" alt="" /></span>
-								<p>collaboration w/ Angie Hormaza</p>
+								<h3 class="major">In Collaboration w/ Angie Hormaza</h3>
 								<span class="image main"><img src="images/image6.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image8.jpg" alt="" /></span>
 								<span class="image main"><img src="images/image9.jpg" alt="" /></span>
