--- a/index.html
+++ b/index.html
@@ -358,6 +358,15 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+		
+		<!-- Particles.js -->
+			<script src="assets/js/particles.min.js"></script>
+			<script>
+			  particlesJS.load('bg', 'assets/particlesjs-config.json', function() {
+			    console.log('particles.js config loaded');
+			  });
+			</script>
 
 	</body>
 </html>
+
