--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">About Me</a></li>
-								<li><a href="#CPRF">Cal Poly Rose Float</a></li>
+								<!--<li><a href="#CPRF">Cal Poly Rose Float</a></li>-->
 								<li><a href="#Projects">Projects</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -365,5 +365,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
